# itmo-distrib

pa1/: CMakeLists.txt  args.c  args.h  child.c  child.h  ipc.c  main.c  parent.c  parent.h  pipe.h
pa3/: C.c  CMakeLists.txt  K.c  K.h  args.c  args.h  bank_robbery.c  banking.c  ipc.c  ipc.h  pipe.h
pa4/: CMakeLists.txt  args.c  child.c  ipc.c  lamport.h  main.c  pa2345.c  pa2345.h
pa6/: CMakeLists.txt  args.c  args.h  banking.c  child.h  ipc.c  ipc.h  pa2345.c  parent.c  pipe.h
pa7/: C.c  C.h  CMakeLists.txt  K.c  bank_robbery.c  banking.c  banking.h  ipc.c  ipc.h  lamport.c  lamport.h  main.c
